--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "https": "local-ssl-proxy --source 3001 --target 3000",
+    "dev-https": "yarn dev & yarn https",
     "start": "next start"
   },
   "dependencies": {
     "@prisma/client": "3.4.2",
+    "local-ssl-proxy": "^1.3.0",
     "next": "11.1.2",
     "next-auth": "3.29.0",
     "react": "17.0.2",
