--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
   "author": "",
   "scripts": {
     "dev": "next",
-    "build": "next build",
     "https": "local-ssl-proxy --source 3001 --target 3000",
     "dev-https": "yarn dev & yarn https",
-    "start": "next start"
+    "build": "next build",
+    "start": "next start",
+    "type-check": "tsc --pretty --noEmit",
+    "lint": "eslint . --ext ts --ext tsx --ext js --ext md",
+    "format": "prettier --write .",
+    "test-all": "yarn lint && yarn type-check && yarn test"
   },
   "dependencies": {
     "@prisma/client": "3.4.2",
-    "local-ssl-proxy": "^1.3.0",
     "next": "11.1.2",
     "next-auth": "3.29.0",
     "react": "17.0.2",
@@ -25,9 +28,16 @@
     "@types/next-auth": "3.13.0",
     "@types/node": "16.4.2",
     "@types/react": "17.0.34",
+    "local-ssl-proxy": "^1.3.0",
     "prisma": "3.4.2",
     "ts-node": "10.4.0",
-    "typescript": "4.4.4"
+    "typescript": "4.4.4",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-react": "^7.19.0",
+    "prettier": "^2.0.2"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
