--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     "source.fixAll.stylelint": "explicit"
   },
   // Add those two lines:
-  "editor.formatOnSave": true, // Tell VSCode to format files on save
+  "editor.formatOnSave": false, // Tell VSCode to format files on save
   "editor.defaultFormatter": "esbenp.prettier-vscode", // Tell VSCode to use Prettier as default file formatter
   // Recommended config for the extension
   "css.validate": false,
